--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body { 
     margin: 0; 
     padding: 0; 
-    background-color: black; 
+    background: rgb(131,58,180);
+    background: linear-gradient(56deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,161,69,1) 100%);
 }
 
 .wrapper { 
@@ -15,24 +16,37 @@ body {
     width: 100%; 
 }
 
-.button {
-    position: relative;
-    top: -45px;
-    background-color: white;
-    color: black;
-    border: 2px solid #00e2e2;
-    border-radius: 5px;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Barlow', sans-serif;
-    font-size: 25px;
-    transition: 0.4s;
-    cursor: pointer;
+.button-container {
+    border: 2px solid black;
+    border-radius: 7px;
+    box-shadow: inset 0 20px 4px -19px rgba(255,255,255,0.7) !important;
+    padding: 10px;
 }
 
-.button:hover { 
-    background-color: #02cccc; 
+button {
+    width: 120px;
+    height: 75px;
+    font-family: 'Barlow', sans-serif;
+    font-size: 25px;
     color: white;
-    cursor: pointer; 
+    text-shadow: 0px 2px 5px black;
+    background-image: linear-gradient(to top, #696969 0%, #575757 100%);
+    border: 2px solid black;
+    border-radius: 7px;
+    box-shadow: inset 0 20px 4px -19px rgba(255,255,255,0.4), 0 12px 13px 0 rgba(0,0,0,0.3);
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover {
+    background-image: linear-gradient(to bottom, #696969 0%, #505050 100%);
+}
+
+button::before, button::after {
+    transition: all .25s;
+}
+
+button:active {
+    transform: translateY(.2rem);
+    box-shadow: 0 6px 6.5px 0 rgba(0,0,0,.3) !important;
 }
