--- a/style.css
+++ b/style.css
@@ -1,52 +1,52 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Barlow&display=swap");
 
-body { 
-    margin: 0; 
-    padding: 0; 
-    background: rgb(131,58,180);
-    background: linear-gradient(56deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,161,69,1) 100%);
+body {
+  margin: 0;
+  padding: 0;
+  background: rgb(37, 37, 37);
 }
 
-.wrapper { 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-    height: 100vh; 
-    width: 100%; 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .button-container {
-    border: 2px solid black;
-    border-radius: 7px;
-    box-shadow: inset 0 20px 4px -19px rgba(255,255,255,0.7) !important;
-    padding: 10px;
+  border: 2px solid black;
+  border-radius: 7px;
+  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7);
+  padding: 10px;
 }
 
 button {
-    width: 120px;
-    height: 75px;
-    font-family: 'Barlow', sans-serif;
-    font-size: 25px;
-    color: white;
-    text-shadow: 0px 2px 5px black;
-    background-image: linear-gradient(to top, #696969 0%, #575757 100%);
-    border: 2px solid black;
-    border-radius: 7px;
-    box-shadow: inset 0 20px 4px -19px rgba(255,255,255,0.4), 0 12px 13px 0 rgba(0,0,0,0.3);
-    cursor: pointer;
-    outline: none;
+  width: 120px;
+  height: 75px;
+  font-family: "Barlow", sans-serif;
+  font-size: 25px;
+  color: white;
+  text-shadow: 0 2px 5px black;
+  background-image: linear-gradient(to top, #696969 0%, #575757 100%);
+  border: 2px solid black;
+  border-radius: 7px;
+  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 13px 0 rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
 
 button:hover {
-    background-image: linear-gradient(to bottom, #696969 0%, #505050 100%);
+  background-image: linear-gradient(to bottom, #696969 0%, #505050 100%);
 }
 
-button::before, button::after {
-    transition: all .25s;
+button::before,
+button::after {
+  transition: all 0.25s;
 }
 
 button:active {
-    transform: translateY(.2rem);
-    box-shadow: 0 6px 6.5px 0 rgba(0,0,0,.3) !important;
+  transform: translateY(0.2rem);
+  box-shadow: 0 6px 6.5px 0 rgba(0, 0, 0, 0.3);
 }
