--- a/style.css
+++ b/style.css
@@ -15,31 +15,31 @@ body {
 
 .button-container {
   border: 2px solid black;
+  padding: 10px;
   border-radius: 7px;
   box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7);
-  padding: 10px;
 }
 
 button {
+  cursor: pointer;
+  outline: none;
   width: 120px;
   height: 75px;
   font-family: Barlow, sans-serif;
   font-size: 25px;
   color: white;
   text-shadow: 0 2px 5px black;
-  background-image: linear-gradient(to top, #696969 0%, #575757 100%);
+  background: linear-gradient(to top, #696969, #575757);
   border: 2px solid black;
   border-radius: 7px;
-  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 13px 0 rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-  outline: none;
+  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
 }
 
 button:hover {
-  background-image: linear-gradient(to bottom, #696969 0%, #505050 100%);
+  background: linear-gradient(to bottom, #696969, #575757);
 }
 
 button:active {
   transform: translateY(3px);
-  box-shadow: 0 6px 6.5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.3);
 }
